# NotesManager

./: CMakeLists.txt  README.md
NotesManagerC/: CMakeLists.txt
NotesManagerC/code/: SimpleExample.c  main.c  tui.c  tui.h
NotesManagerC/code/NotesManagerInclude/: Algorithms.h
NotesManagerCore/: CMakeLists.txt  DoxyFile
NotesManagerCore/code/private/: DoxyFile
NotesManagerCore/code/public/: Doxyfile
NotesManagerCore/doc/html/: Algorithms_8h.html  Algorithms_8h_source.html  Algorithms_8hpp.html  Algorithms_8hpp_source.html  BasicCryptoAlgorithm_8cpp.html  Crypter_8cpp.html  Crypter_8hpp.html  Crypter_8hpp_source.html  CryptoAlgorithmException_8cpp.html  CryptoAlgorithmException_8hpp.html  CryptoAlgorithmException_8hpp_source.html  CryptoAlgorithm_8hpp.html  CryptoAlgorithm_8hpp_source.html  CryptoAlgorithms_8hpp.html  CryptoAlgorithms_8hpp_source.html  Database_8cpp.html  Database_8hpp.html  Database_8hpp_source.html  EncryptedNote_8hpp.html  EncryptedNote_8hpp_source.html  HMACMD5_8cpp.html  NoCryptoAlgorithm_8cpp.html  Note_8cpp.html  Note_8hpp.html  Note_8hpp_source.html  NotesManagerCore_8cpp.html  NotesManagerCore_8h.html  NotesManagerCore_8h_source.html  SQLite3_8cpp.html  SQLite3_8hpp.html  SQLite3_8hpp_source.html  Signer_8hpp.html  Signer_8hpp_source.html  Signers_8hpp.html  Signers_8hpp_source.html  Utils_8hpp.html  Utils_8hpp_source.html  annotated.html  classNotesManager_1_1CryptoAlgorithmException-members.html  classNotesManager_1_1CryptoAlgorithmException.html  (+64 more)
NotesManagerCore/doc/latex/: Algorithms_8h.tex  Algorithms_8h_source.tex  Algorithms_8hpp.tex  Algorithms_8hpp_source.tex  BasicCryptoAlgorithm_8cpp.tex  Crypter_8cpp.tex  Crypter_8hpp.tex  Crypter_8hpp_source.tex  CryptoAlgorithmException_8cpp.tex  CryptoAlgorithmException_8hpp.tex  CryptoAlgorithmException_8hpp_source.tex  CryptoAlgorithm_8hpp.tex  CryptoAlgorithm_8hpp_source.tex  CryptoAlgorithms_8hpp.tex  CryptoAlgorithms_8hpp_source.tex  Database_8cpp.tex  Database_8hpp.tex  Database_8hpp_source.tex  EncryptedNote_8hpp.tex  EncryptedNote_8hpp_source.tex  HMACMD5_8cpp.tex  NoCryptoAlgorithm_8cpp.tex  Note_8cpp.tex  Note_8hpp.tex  Note_8hpp_source.tex  NotesManagerCore_8cpp.tex  NotesManagerCore_8h.tex  NotesManagerCore_8h_source.tex  SQLite3_8cpp.tex  SQLite3_8hpp.tex  SQLite3_8hpp_source.tex  Signer_8hpp.tex  Signer_8hpp_source.tex  Signers_8hpp.tex  Signers_8hpp_source.tex  Utils_8hpp.tex  Utils_8hpp_source.tex  annotated.tex  (+39 more)
(+299 files in other folders)
